# openapi-watchit.yaml
@@ -131,6 +131,41 @@ paths:
           $ref: '#/components/responses/ValidationError'
         '500':
           $ref: '#/components/responses/DatabaseError'
+  /api/v1/auth/refresh-token:
+    get:
+      summary: Get new tokens
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                refreshToken:
+                  type: string
+                  example: eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ1c2VybmFtZSI6Im1heGltZSIsImlhdCI6MTYxMzUwNjQwMCwiZXhwIjoxNjEzNTEyMDAwfQ.7
+      responses:
+        '200':
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  status:
+                    type: string
+                    example: success
+                  message:
+                    type: string
+                    example: Tokens successfully refreshed
+                  user:
+                    $ref: '#/components/schemas/UserSigninResponse'
+        '400':
+          $ref: '#/components/responses/ValidationError'
+        '404':
+          $ref: '#/components/responses/NotFoundError'
+        '500':
+          $ref: '#/components/responses/DatabaseError'
   /api/v1/movies/{id}:
     get:
       summary: Get movie details by ID
